added project id for each shit so that i can manage projects views etc. created nexjts app to view shit, and started sdk development